bk_ida/bzip2ida/c0/spec_init
/data/output_dir/patch/bzip2/ida/clang/O0/bzip2-clang-O0/spec_init/src/spec.c:553:33: error: use of undeclared identifier 'spec_fd_t'; did you mean 'spec_fd'?
memset( &spec_fd[i], 0, sizeof( spec_fd_t)); 
                                ^~~~~~~~~
                                spec_fd
/data/output_dir/patch/bzip2/ida/clang/O0/bzip2-clang-O0/spec_init/src/spec.c:50:3: note: 'spec_fd' declared here
} spec_fd[MAX_SPEC_FD];
  ^
1 error generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O0/bzip2-clang-O0/spec_init/src/obj/spec.o] Error 1
